<resources>
    <string name="app_name">BookList</string>
    <string name="title">Title</string>
    <string name="isbn">ISBN</string>
    <string name="firstAuthor">First Author</string>
    <string name="publishCompany">Publish Company</string>
    <string name="edition">Edition</string>
    <string name="pages">Number of Pages</string>
    <string name="save">Save</string>
    <string name="new_book">New Book</string>
    <string name="edit_book">Edit Book</string>
    <string name="delete_book">Delete Book</string>
</resources>